--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,6 @@
 				</nav>
 			</div>
 		</main>
-		<script src="js/index.js"></script>
+		<script src="/Users/sultanturutbalioglu/Github Repos/CoDrops_MarqueeMenu/src/js/index.js"></script>
 	</body>
 </html>
